[telegram] Add support for sendVideo (MP4) and sendAnimation (GIF) (#8969)
* Add sendVideo and sendAnimation features.
* Re-order functions to keep inline with other functions.
* Readme change to trigger new build.
* Add ability to use raw file paths to send video and animations.
* Change Paths.get to Path.of as JavaDocs recommend.
* Allow absolute paths in SendPhoto methods and update readme.md
* Support for no caption with photo.
* Add absolute path support for png and webp.
* Add all file types requested.
* Remove multiple OR and only do lowercase once.

Signed-off-by: Matthew Skinner <matt@pcmus.com>